--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@
   height: 100vh;
   background: rgb(213,243,255);
   background: radial-gradient(circle, rgba(213,243,255,1) 0%, rgba(81,180,232,1) 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .App-two {
